0.Apps/3.Kubernetes-Service_Pod/3.nodeDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: coursek8s
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: node-app-web
  template:
    metadata:
      labels:
        name: node-app-web
    spec:
      containers:
        - name: client
          image: leoenes/nodeapp:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 8081
