0.Apps/3.Kubernetes-Service_Pod/9.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: coursek8s
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - leonnardocampos.com
        - www.leonnardocampos.com
      secretName: leonnardocampos-com
  rules:
      - host: leonnardocampos.com
        http: &http_rules
          paths:
              - pathType: Prefix
                path: /?(.*)
                backend:
                    serviceName: client-service
                    servicePort: 8081
              # - path: /api/?(.*)
              #   backend:
              #       serviceName: server-service
              #       servicePort: 5000
      - host: www.leonnardocampos.com
        http: *http_rules
